js script for collapsed navbar fixed

--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -17,8 +17,8 @@
 @mixin columns($key) {
   @for $i from 1 through 12 {
     .col-#{$key}-#{$i} {
-      flex-basis: (100%/12) * $i;
-      max-width: (100%/12) * $i;
+      flex-basis: calc(100% / 12) * $i;
+      max-width: calc(100% / 12) * $i;
     }
   }
 }
